--- a/index.html
+++ b/index.html
@@ -549,19 +549,19 @@
 
 							<div class="row">
 								<div class="col-md-4 text-center">
-									<a href="" target="_blank">
+									<a href="https://gmail.com" target="_blank">
 										<i class="fa fa-envelope" style="font-size:100px; color:#1D8CBD;"></i>
 										<p style="margin-top: 20px; color:grey; font-weight:900;">Send Email</p>
 									</a>
 								</div>
 								<div class="col-md-4 text-center">
-									<a href="" target="_blank">
+									<a href="https://t.me" target="_blank">
 										<i class="fa fa-telegram" style="font-size:100px; color:#2799D2;"></i>
 										<p style="margin-top: 20px; color:grey; font-weight:900;">Join Telegram</p>
 									</a>
 								</div>
 								<div class="col-md-4 text-center">
-									<a href="" target="_blank">
+									<a href="https://twitter.com" target="_blank">
 										<i class="fa fa-twitter" style="font-size:100px; color:#24A6E5;"></i>
 										<p style="margin-top: 20px; color:grey; font-weight:900;">Follow Twitter</p>
 									</a>
