--- a/index.html
+++ b/index.html
@@ -530,13 +530,13 @@
 									</a>
 								</div>
 								<div class="col-md-4 text-center">
-									<a href="https://t.me" target="_blank">
+									<a href="https://t.me/littleponyclub" target="_blank">
 										<i class="fa fa-telegram" style="font-size:100px; color:#2799D2;"></i>
 										<p style="margin-top: 20px; color:grey; font-weight:900;">Join Telegram</p>
 									</a>
 								</div>
 								<div class="col-md-4 text-center">
-									<a href="https://twitter.com" target="_blank">
+									<a href="https://twitter.com/littlepony_club" target="_blank">
 										<i class="fa fa-twitter" style="font-size:100px; color:#24A6E5;"></i>
 										<p style="margin-top: 20px; color:grey; font-weight:900;">Follow Twitter</p>
 									</a>
