--- a/index.html
+++ b/index.html
@@ -382,6 +382,24 @@
 				</div>
 			</div>
 		</section><!-- awesome-feature -->
+		
+		
+				<section class="h4-awesome-feature s-padding  s-pb-large">
+			<div class="container">
+				<div class="s-title">
+					<h2 class="wow">Donations</h2>
+					<!-- <p>Our Advantages and Features</p> -->
+				</div>
+				<div class="row align-items-center">
+
+					<div class="col-12 text-center">
+						<p> We will send the donation to those kids on streets and <br> little pony will give relief goods.
+						<br> send the donation to this address [BEP20]: 0x5f3d6443BbD8373Be406F2682194c25b3563dBB8 </p>
+					</div>
+
+				</div>
+			</div>
+		</section><!-- awesome-feature -->
 
 
 		
